# CMakeList.txt : CMake project for Graf2019HF01, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Graf2019HF01 "Graf2019HF01.cpp" "Graf2019HF01.h")

# TODO: Add tests and install targets if needed.
